src/z80asm/z80asm2/t/40-syntax/expected/phase_01.txt
% z88dk-z80asm -v -dump-after-parse t/40-syntax//input/phase_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/40-syntax/input/phase_01.asm...
t/40-syntax/input/phase_01.asm:1:6: error: Expression expected
    phase
         ^
t/40-syntax/input/phase_01.asm:2:9: error: Unexpected token: ","
    phase 10,
            ^
Program
    PhaseStmt
        Location: t/40-syntax/input/phase_01.asm:3:1
        Expression:
            ExprBinary: +
                LHS:
                    ExprLiteralInt: 1
                RHS:
                    ExprBinary: *
                        LHS:
                            ExprLiteralInt: 2
                        RHS:
                            ExprLiteralInt: 3
